--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.leeyumo</groupId>
     <artifactId>learningSpring-ADK</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>pom</packaging>
+    <!--<packaging>pom</packaging>-->
 
     <properties>
         <swagger-annotations-version>1.5.21</swagger-annotations-version>
